corrects locales names for japan and korean and adds missing string

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -87,7 +87,8 @@
       "copy_link": "লিঙ্ক কপি করুন",
       "copy_image": "ছবি কপি করুন",
       "select_all": "সব নির্বাচন করুন",
-      "language": "ভাষা (Language)"
+      "language": "ভাষা (Language)",
+      "dateformat": "Use system date format"
     },
     "view": {
       "title": "View",
