--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -87,7 +87,8 @@
             "copy_link": "Копировать ссылку",
             "copy_image": "Копировать изображение",
             "select_all": "Выделить все",
-            "language": "Язык (Language)"
+            "language": "Язык (Language)",
+            "dateformat": "Use system date format"
         },
         "view": {
             "title": "Вид",
