--- a/src/locales/sl_SI.json
+++ b/src/locales/sl_SI.json
@@ -87,7 +87,8 @@
             "copy_link": "Kopiraj povezavo",
             "copy_image": "Kopiraj sliko",
             "select_all": "Izberi vse",
-            "language": "Jezik (Language)"
+            "language": "Jezik (Language)",
+            "dateformat": "Use system date format"
         },
         "view": {
             "title": "Pogled",
