--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -87,7 +87,8 @@
             "copy_link": "Kopírovat odkaz",
             "copy_image": "Kopírovat obrázek",
             "select_all": "Vybrat vše",
-            "language": "Jazyk (Language)"
+            "language": "Jazyk (Language)",
+            "dateformat": "Use system date format"
         },
         "view": {
             "title": "Zobrazení",
