--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -87,7 +87,8 @@
             "copy_image": "Copier Image",
             "copy_link": "Copier Link",
             "select_all": "Tout sélectionner",
-            "language": "Langage (Language)"
+            "language": "Langage (Language)",
+            "dateformat": "Use system date format"
         },
         "view": {
             "title": "Présentation",
