--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -87,7 +87,8 @@
             "copy_link": "Copiar link",
             "copy_image": "Copiar imagem",
             "select_all": "Selecionar tudo",
-            "language": "Idioma (Language)"
+            "language": "Idioma (Language)",
+            "dateformat": "Use system date format"
         },
         "view": {
             "title": "Ver",
