--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -87,7 +87,8 @@
             "copy_link": "Copie Link",
             "copy_image": "Copie Imagine",
             "select_all": "Selectează tot",
-            "language": "Limba (Language)"
+            "language": "Limba (Language)",
+            "dateformat": "Use system date format"
         },
         "view": {
             "title": "Vizualizează",
