--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -93,6 +93,7 @@
         "view": {
             "title": "Vizualizează",
             "emoji": "Convertește text cu emoji",
+            "suggestemoji": "Suggest emoji on typing",
             "hide_dock": "Ascunde icon Dock",
             "fullscreen": "Fereastră maximizată",
             "tray": {
