--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -93,6 +93,7 @@
         "view": {
             "title": "Вид",
             "emoji": "Преобразовать текст в emoji",
+            "suggestemoji": "Suggest emoji on typing",
             "hide_dock": "Скрыть иконку в доке",
             "fullscreen": "Переключить полноэкранный режим",
             "tray": {
