--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -93,6 +93,7 @@
         "view": {
             "title": "பார்வையிடு",
             "emoji": "எழுத்தினை  ",
+            "suggestemoji": "Suggest emoji on typing",
             "hide_dock": "Hide Dock icon",
             "fullscreen": "Toggle Fullscreen",
             "tray": {
