--- a/src/locales/uk_UA.json
+++ b/src/locales/uk_UA.json
@@ -93,6 +93,7 @@
         "view": {
             "title": "Вид",
             "emoji": "Перетворити текст в емодзі",
+            "suggestemoji": "Suggest emoji on typing",
             "hide_dock": "Сховати іконку в док",
             "fullscreen": "Перемкнути в повноекранний режим",
             "tray": {
