--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -93,6 +93,7 @@
         "view": {
             "title": "Présentation",
             "emoji": "Convertir le texte en emoji",
+            "suggestemoji": "Suggest emoji on typing",
             "suggestemoji": "Suggérer les emoji au cours de la frappe",
             "hide_dock": "Cacher l'icône du Dock",
             "fullscreen": "Activer le mode plein écran",
