--- a/src/locales/sv_SE.json
+++ b/src/locales/sv_SE.json
@@ -93,6 +93,7 @@
         "view": {
             "title": "Visa",
             "emoji": "Konvertera text till emoji",
+            "suggestemoji": "Suggest emoji on typing",
             "hide_dock": "Göm dockikon",
             "fullscreen": "Växla till fullskärm",
             "tray": {
