adds new string in all translations, albeit in english

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Opravdu opustit konverzaci?",
         "search": "Vyhledat osoby",
         "new_message": "Nová zpráva",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Oznámení",
