--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Покинуть диалог?",
         "search": "Поиск людей",
         "new_message": "Новое сообщение",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Уведомление",
