--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -40,7 +40,8 @@
     "leave_confirm": "সত্যিই কথোপকথন ত্যাগ করতে চান?",
     "search": "লোকেদের অনুসন্ধান করুন",
     "new_message": "নতুন বার্তা",
-    "new_attachment": "New message received (image or video)"
+    "new_attachment": "New message received (image or video)",
+    "open_link": "Opening the link in the browser..."
   },
   "notification": {
     "one": "প্রজ্ঞাপন",
