--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Er du sikker på du ønsker at forlade samtalen?",
         "search": "Søg efter mennesker",
         "new_message": "Ny besked",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Notifikation",
