--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Wollen Sie die Unterhaltung wirklich verlassen?",
         "search": "Kontakte suchen",
         "new_message": "Neue Nachricht",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Benachrichtigung",
