--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -40,7 +40,8 @@
         "leave_confirm": "¿Dejar conversación definitivamente?",
         "search": "Buscar personas",
         "new_message": "Nuevo Mensaje",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Notificación",
