--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Voulez-vous vraiment quitter la conversation ?",
         "search": "Chercher des contacts",
         "new_message": "Nouveau message",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Notification",
