--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -40,7 +40,8 @@
         "leave_confirm": "本当にこのチャットをやめますか？",
         "search": "コンタクト検索",
         "new_message": "新メッセージ",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "通知",
