--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -40,7 +40,8 @@
         "leave_confirm": "정말로 대화를 나가시겠습니까?",
         "search": "사용자 검색",
         "new_message": "새 메시지",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "알림",
