--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -40,7 +40,8 @@
     "leave_confirm": "Na pewno chcesz opuścić rozmowę?",
     "search": "Szukaj uczestników",
     "new_message": "Nowa Wiadomość",
-    "new_attachment": "New message received (image or video)"
+    "new_attachment": "New message received (image or video)",
+    "open_link": "Opening the link in the browser..."
   },
   "notification": {
     "one": "Powiadomienie",
