--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Deseja realmente sair da conversa?",
         "search": "Procurar pessoas",
         "new_message": "Nova mensagem recebida",
-        "new_attachment": "Nova mensagem recebida (imagem ou vídeo)"
+        "new_attachment": "Nova mensagem recebida (imagem ou vídeo)",
+        "open_link": "A abrir o link no browser..."
     },
     "notification": {
         "one": "Notificação",
