--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Deseja realmente sair da conversa?",
         "search": "Procurar pessoas",
         "new_message": "Nova mensagem recebida",
-        "new_attachment": "New messagem recebida (imagem ou vídeo)"
+        "new_attachment": "Nova messagem recebida (imagem ou vídeo)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Notificação",
