--- a/src/locales/sl_SI.json
+++ b/src/locales/sl_SI.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Naj zapustim klepet?",
         "search": "Najdi ljudi",
         "new_message": "Novo sporočilo",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Obvestilo",
