--- a/src/locales/sv_SE.json
+++ b/src/locales/sv_SE.json
@@ -40,7 +40,8 @@
         "leave_confirm": "Vill du lämna konversationen?",
         "search": "Sök personer",
         "new_message": "Nytt meddelande",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "Notifiering",
