--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -40,7 +40,8 @@
         "leave_confirm": "உண்மையாகவே உரையாடலை விட்டு விலக வேண்டுமா?",
         "search": "மக்களை தேடு",
         "new_message": "புதிய செய்தியிடல்",
-        "new_attachment": "New message received (image or video)"
+        "new_attachment": "New message received (image or video)",
+        "open_link": "Opening the link in the browser..."
     },
     "notification": {
         "one": "அறிவிப்பு",
