--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -38,6 +38,8 @@
         "delete_confirm": "Opravdu smazat konverzaci?",
         "leave": "Opustit konverzaci",
         "leave_confirm": "Opravdu opustit konverzaci?",
+        "history_on": "History has been turned on.",
+        "history_off": "History has been turned off.",
         "search": "Vyhledat osoby",
         "new_message": "Nová zpráva",
         "new_attachment": "New message received (image or video)",
