--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -38,6 +38,8 @@
         "delete_confirm": "Er du sikker på du ønsker at slette samtalen?",
         "leave": "Forlad samtalen",
         "leave_confirm": "Er du sikker på du ønsker at forlade samtalen?",
+        "history_on": "History has been turned on.",
+        "history_off": "History has been turned off.",
         "search": "Søg efter mennesker",
         "new_message": "Ny besked",
         "new_attachment": "New message received (image or video)",
