--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -38,6 +38,8 @@
         "delete_confirm": "¿Eliminar conversación definitivamente?",
         "leave": "Dejar conversación",
         "leave_confirm": "¿Dejar conversación definitivamente?",
+        "history_on": "History has been turned on.",
+        "history_off": "History has been turned off.",
         "search": "Buscar personas",
         "new_message": "Nuevo Mensaje",
         "new_attachment": "New message received (image or video)",
