--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -38,6 +38,8 @@
         "delete_confirm": "本当にこのチャットを削除しますか？",
         "leave": "チャットをやめる",
         "leave_confirm": "本当にこのチャットをやめますか？",
+        "history_on": "History has been turned on.",
+        "history_off": "History has been turned off.",
         "search": "コンタクト検索",
         "new_message": "新メッセージ",
         "new_attachment": "New message received (image or video)",
