--- a/src/locales/sv_SE.json
+++ b/src/locales/sv_SE.json
@@ -38,6 +38,8 @@
         "delete_confirm": "Vill du radera konversationen?",
         "leave": "Lämna konversation",
         "leave_confirm": "Vill du lämna konversationen?",
+        "history_on": "History has been turned on.",
+        "history_off": "History has been turned off.",
         "search": "Sök personer",
         "new_message": "Nytt meddelande",
         "new_attachment": "New message received (image or video)",
