--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -9,7 +9,7 @@
     "recent": "Poslední",
     "details": "Detaily",
 
-    "connection" :{
+    "connection": {
         "connecting": "Připojování",
         "loading": "Načítání kontaktů",
         "not_connected": "Nepřipojeno (zkontrolovat připojení)"
@@ -100,7 +100,7 @@
                 "show_tray": "Zobrazit ikonu v oznamovací oblasti",
                 "show_window": "Zobrazit okno",
                 "toggle_minimize": "Přepnout minimalizaci do oznamovací oblasti",
-                "start_minimize": "Spustit minimalozované v oznamovací oblasti",
+                "start_minimize": "Spustit minimalizované v oznamovací oblasti",
                 "close": "Zavřít do oznamovací oblasti"
             },
             "escape": {
