adds template to all translations

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -39,7 +39,8 @@
     "leave": "কথোপকথন ত্যাগ করুন",
     "leave_confirm": "সত্যিই কথোপকথন ত্যাগ করতে চান?",
     "search": "লোকেদের অনুসন্ধান করুন",
-    "new_message": "নতুন বার্তা"
+    "new_message": "নতুন বার্তা",
+    "new_attachment": "New message received (image or video)"
   },
   "notification": {
     "one": "প্রজ্ঞাপন",
