--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -39,7 +39,8 @@
         "leave": "Покинуть диалог",
         "leave_confirm": "Покинуть диалог?",
         "search": "Поиск людей",
-        "new_message": "Новое сообщение"
+        "new_message": "Новое сообщение",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Уведомление",
