--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -39,7 +39,8 @@
         "leave": "Opustit konverzaci",
         "leave_confirm": "Opravdu opustit konverzaci?",
         "search": "Vyhledat osoby",
-        "new_message": "Nová zpráva"
+        "new_message": "Nová zpráva",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Oznámení",
