--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -39,7 +39,8 @@
         "leave": "Unterhaltung verlassen",
         "leave_confirm": "Wollen Sie die Unterhaltung wirklich verlassen?",
         "search": "Kontakte suchen",
-        "new_message": "Neue Nachricht"
+        "new_message": "Neue Nachricht",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Benachrichtigung",
