--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -39,7 +39,8 @@
         "leave": "Quitter la conversation",
         "leave_confirm": "Voulez-vous vraiment quitter la conversation ?",
         "search": "Chercher des contacts",
-        "new_message": "Nouveau message"
+        "new_message": "Nouveau message",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Notification",
