--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -39,7 +39,8 @@
         "leave": "Lascia conversazione",
         "leave_confirm": "Vuoi davvero lasciare la conversazione?",
         "search": "Cerca Persone",
-        "new_message": "Nuovo Messaggio"
+        "new_message": "Nuovo Messaggio",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Notifica",
