--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -39,7 +39,8 @@
         "leave": "チャットをやめる",
         "leave_confirm": "本当にこのチャットをやめますか？",
         "search": "コンタクト検索",
-        "new_message": "新メッセージ"
+        "new_message": "新メッセージ",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "通知",
