--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -39,7 +39,8 @@
         "leave": "Sair da conversa",
         "leave_confirm": "Deseja realmente sair da conversa?",
         "search": "Procurar pessoas",
-        "new_message": "Nova Mensagem"
+        "new_message": "Nova mensagem recebida",
+        "new_attachment": "Nova mensagem recebida (imagem ou vídeo)"
     },
     "notification": {
         "one": "Notificação",
