--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -39,7 +39,8 @@
         "leave": "Părăsește conversație",
         "leave_confirm": "Părăsire conversație?",
         "search": "Caută persoane",
-        "new_message": "Nou mesaj"
+        "new_message": "Nou mesaj",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Notificare",
