--- a/src/locales/sl_SI.json
+++ b/src/locales/sl_SI.json
@@ -39,7 +39,8 @@
         "leave": "Zapusti klepet",
         "leave_confirm": "Naj zapustim klepet?",
         "search": "Najdi ljudi",
-        "new_message": "Novo sporočilo"
+        "new_message": "Novo sporočilo",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Obvestilo",
