--- a/src/locales/sv_SE.json
+++ b/src/locales/sv_SE.json
@@ -39,7 +39,8 @@
         "leave": "Lämna konversation",
         "leave_confirm": "Vill du lämna konversationen?",
         "search": "Sök personer",
-        "new_message": "Nytt meddelande"
+        "new_message": "Nytt meddelande",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Notifiering",
