Add toggle main window menu item
- Solve issue #223

--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -171,6 +171,7 @@
             "title": "Finestra",
             "minimize": "Riduci",
             "close": "Chiudi",
+            "toggle_window": "Mostra/Nascondi finestra principale",
             "front": "Porta tutto avanti"
         }
     }
