uniform naming for toggling window show/hide

--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -99,7 +99,7 @@
             "hide_dock": "Esconder Ícone da Dock",
             "fullscreen": "Alternar Ecrã Inteiro",
             "tray": {
-                "show_tray": "Mostrar icon no tray",
+                "show_tray": "Mostrar/esconder janela",
                 "show_window": "Mostrar janela",
                 "toggle_minimize": "Mostrar janela / minimizar para tray",
                 "start_minimize": "Começar minimizado no tray",
