--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -1,6 +1,6 @@
 {
     "__MyLocaleLanguage__": "Português (BR)",
-    "__maintaner__": "http://github.com/lai0n",
+    "__maintaner__": "http://github.com/puceduck",
 
     "title": "YakYak - Cliente Hangouts",
     "description": "Cliente desktop para Google Hangouts",
