--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -38,8 +38,8 @@
         "delete_confirm": "האם אתה בטוח שברצונך למחוק את השיחה?",
         "leave": "עזב את השיחה",
         "leave_confirm": "האם אתה בטוח שברצונך לעזור את השיחה?",
-        "history_on": "History has been turned on.",
-        "history_off": "History has been turned off.",
+        "history_on": "History has been turned on for this conversation.",
+        "history_off": "History has been turned off for this conversation.",
         "search": "חיפוש אנשים",
         "new_message": "הודעה חדשה",
         "new_attachment": "New message received (image or video)",
