--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -38,8 +38,8 @@
         "delete_confirm": "Vuoi davvero eliminare la conversazione?",
         "leave": "Lascia conversazione",
         "leave_confirm": "Vuoi davvero lasciare la conversazione?",
-        "history_on": "History has been turned on.",
-        "history_off": "History has been turned off.",
+        "history_on": "History has been turned on for this conversation.",
+        "history_off": "History has been turned off for this conversation.",
         "search": "Cerca Persone",
         "new_message": "Nuovo Messaggio",
         "new_attachment": "New message received (image or video)",
