--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -38,8 +38,8 @@
         "delete_confirm": "本当にこのチャットを削除しますか？",
         "leave": "チャットをやめる",
         "leave_confirm": "本当にこのチャットをやめますか？",
-        "history_on": "History has been turned on.",
-        "history_off": "History has been turned off.",
+        "history_on": "History has been turned on for this conversation.",
+        "history_off": "History has been turned off for this conversation.",
         "search": "コンタクト検索",
         "new_message": "新メッセージ",
         "new_attachment": "New message received (image or video)",
