--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -38,8 +38,8 @@
     "delete_confirm": "Na pewno chcesz usunąć rozmowę?",
     "leave": "Opuść rozmowę",
     "leave_confirm": "Na pewno chcesz opuścić rozmowę?",
-    "history_on": "History has been turned on.",
-    "history_off": "History has been turned off.",
+    "history_on": "History has been turned on for this conversation.",
+    "history_off": "History has been turned off for this conversation.",
     "search": "Szukaj uczestników",
     "new_message": "Nowa Wiadomość",
     "new_attachment": "New message received (image or video)",
