--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -38,8 +38,8 @@
         "delete_confirm": "Удалить диалог?",
         "leave": "Покинуть диалог",
         "leave_confirm": "Покинуть диалог?",
-        "history_on": "History has been turned on.",
-        "history_off": "History has been turned off.",
+        "history_on": "History has been turned on for this conversation.",
+        "history_off": "History has been turned off for this conversation.",
         "search": "Поиск людей",
         "new_message": "Новое сообщение",
         "new_attachment": "New message received (image or video)",
