--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -38,8 +38,8 @@
     "delete_confirm": "সত্যিই কথোপকথন মুছে ফেলতে চান?",
     "leave": "কথোপকথন ত্যাগ করুন",
     "leave_confirm": "সত্যিই কথোপকথন ত্যাগ করতে চান?",
-    "history_on": "History has been turned on.",
-    "history_off": "History has been turned off.",
+    "history_on": "History has been turned on for this conversation.",
+    "history_off": "History has been turned off for this conversation.",
     "search": "লোকেদের অনুসন্ধান করুন",
     "new_message": "নতুন বার্তা",
     "new_attachment": "New message received (image or video)",
