--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -38,8 +38,8 @@
         "delete_confirm": "உண்மையாகவே உரையாடலை அழிக்க வேண்டுமா ?",
         "leave": "உரையாடலை விட்டு விலக வேண்டுமா",
         "leave_confirm": "உண்மையாகவே உரையாடலை விட்டு விலக வேண்டுமா?",
-        "history_on": "History has been turned on.",
-        "history_off": "History has been turned off.",
+        "history_on": "History has been turned on for this conversation.",
+        "history_off": "History has been turned off for this conversation.",
         "search": "மக்களை தேடு",
         "new_message": "புதிய செய்தியிடல்",
         "new_attachment": "New message received (image or video)",
