--- a/src/locales/uk_UA.json
+++ b/src/locales/uk_UA.json
@@ -163,7 +163,7 @@
                 "newer": "Доступна новіша версія, будь ласка оновіть з %s до %s",
                 "license": "Ліцензія",
                 "authors": "Головні автори",
-                "contributors": "Контрибутори"
+                "contributors": "Контрибутори",
                 "startup": "Відкривати при запуску"
             }
         },
