--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -42,21 +42,21 @@
 					"only": "Thumbnails ను మాత్రమే చూపించు",
 					"animated": "ఆనిమేషన్‌లతో కూడిన thumbnails ను చూపించు"
 				},
-				"timestamp": "చివరి సమాచారం యొక్క సమయాన్ని చూపించు",
-				"last": "చివరి సమాచారాన్ని చూపించు",
+				"timestamp": "చివరి సందేశం యొక్క సమయాన్ని చూపించు",
+				"last": "చివరి సందేశం చూపించు",
 				"previous": "చివరి సంభాషణ",
 				"next": "తదుపరి సంభాషణ",
 				"select": "సంభాషణను ఎంచుకో"
 			},
 			"notification": {
-				"title": "Pop-Up నోటిఫికేషన్‌లు",
-				"show": "నోటిఫికేషన్‌లను చూపించు",
-				"message": "నోటిఫికేషన్‌లో సమాచారాన్ని చూపించు",
-				"username": "నోటిఫికేషన్‌లో పంపినవారి పేరును చూపించు",
-				"avatar": "నోటిఫికేషన్‌లో పంపినవారి చిత్రాన్ని చూపించు",
-				"mute": "నోటిఫికేషన్‌లో శబ్దాన్ని ఆపివేయి",
-				"custom_sound": "యక్‌యక్ యొక్క ప్రత్యేక శబ్దాన్ని నోటిఫికేషన్ కొరకు ఉపయోగించు",
-				"toggle": "నోటిఫికేషన్‌లను toggle చేయి"
+				"title": "Pop-Up ప్రకటనలు",
+				"show": "ప్రకటనలను చూపించు",
+				"message": "ప్రకటనలో సందేశాన్ని చూపించు",
+				"username": "ప్రకటనలో పంపినవారి పేరును చూపించు",
+				"avatar": "ప్రకటనలో పంపినవారి చిత్రాన్ని చూపించు",
+				"mute": "ప్రకటనలో శబ్దాన్ని ఆపివేయి",
+				"custom_sound": "యక్‌యక్ యొక్క ప్రత్యేక శబ్దాన్ని ప్రకటనలకొరకు ఉపయోగించు",
+				"toggle": "ప్రకటనలను toggle చేయి"
 			},
 			"emoji": "అక్షరాలని ఎమోజీగా మార్చు",
 			"suggestemoji": "వ్రాసేటప్పుడు ఎమోజీలను అందివ్వు",
@@ -128,7 +128,7 @@
 		"connecting": "అనుసంధానం అవుతోంది"
 	},
 	"input": {
-		"message": "సమాచారం",
+		"message": "సందేశం",
 		"emoticons": "ఎమోజీలను చూపించు",
 		"image": "చిత్రాన్ని అనుసంధానించు",
 		"typing": "వ్రాస్తున్నారు"
@@ -137,8 +137,8 @@
 		"ok": "సరే"
 	},
 	"notification": {
-		"one": "నోటిఫికేషన్",
-		"other": "నోటిఫికేషన్"
+		"one": "ప్రకటన",
+		"other": "ప్రకటన"
 	},
 	"favorite": {
 		"star_it": "ఇష్టంగా గుర్తించు / గుర్తును తొలగించు",
