Use more context-aware translation for recent

--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -149,7 +149,7 @@
 	},
 	"settings": "ప్రాధాన్యతలు",
 	"details": "వివరములు",
-	"recent": "ప్రస్తుత సంభాషణలు",
+	"recent": "ఇటీవలి సంభాషణలు",
 	"call": {
 		"incoming": "మీకు కాల్ వస్తోంది",
 		"incoming_from": "%s మీకు కాల్ చేస్తున్నారు",
